<resources>
    <string name="app_name">Wound Doctor</string>
    <string name="get_started_text">Get Started</string>
    <string name="wound_doctor_title_text">Wound Doctor</string>
    <string name="login_email_address_hint">Email Address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_or_text">Or</string>
    <string name="login_create_account_button">Create Account</string>
    <string name="create_account_confirm_id_text">Please confirm your email address by entering the unique verification ID sent to you by your doctor</string>
    <string name="create_account_thank_you_text">Thank you for confirming. Please fill in the rest of your details to create your account</string>
    <string name="create_account_patient_id_hint">Verification ID</string>
    <string name="create_account_first_name_hint">First Name</string>
    <string name="create_account_last_name_hint">Last Name</string>
    <string name="login_confirm_patient_button">Confirm</string>
    <string name="create_account_phone_hint">Contact Number</string>
    <string name="main_take_a_picture">Take a Picture</string>
    <string name="menu_title">Take Picture</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="main_my_wounds_button">My Wounds</string>
    <string name="create_account_confirm_password_hint">Confirm Password</string>
    <string name="login_logo_text">WoundDoctor</string>
    <string name="main_health_check_title">Health Check</string>
    <string name="main_health_check_desc">Get an update on the condition \nof your wound</string>
    <string name="main_my_wounds_title">My Wounds</string>
    <string name="main_my_wounds_desc">Register a wound or change \na bandage</string>
    <string name="main_sign_out_title">Sign Out</string>
    <string name="main_sign_out_desc">Sign out of your Wound \nDoctor account</string>
    <string name="main_flash_off_text">Flash Off</string>
    <string name="main_flash_on_text">Flash On</string>
    <string name="adapter_condition_danger">Danger</string>
    <string name="adapter_condition_OK">OK</string>
    <string name="feedback_diagnosing">Diagnosing wound...</string>
    <string name="feedback_posting">Posting feedback...</string>
    <string name="feedback_scheduling">Scheduling update...</string>
</resources>
