<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="18dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/formLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/createAccountProgressBar"
            android:layout_centerHorizontal="true"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/createAccount_VerifyLayout"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/createAccount_FirstTextView"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account_confirm_id_text" />

            <EditText
                android:id="@+id/createAccount_PatientIdEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_account_patient_id_hint"
                android:inputType="text"
                android:maxLines="1" />

            <AutoCompleteTextView
                android:id="@+id/createAccount_EmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/login_email_address_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <Button
                android:id="@+id/createAccount_ConfirmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@android:color/transparent"
                android:text="@string/login_confirm_patient_button"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/createAccount_FormLayout"
            android:visibility="invisible"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/createAccount_SecondTextView"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account_thank_you_text" />

            <EditText
                android:id="@+id/createAccount_FNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/create_account_first_name_hint"
                android:inputType="textPersonName"
                android:maxLines="1" />

            <EditText
                android:id="@+id/createAccount_LNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/create_account_last_name_hint"
                android:inputType="textPersonName"
                android:maxLines="1" />

            <EditText
                android:id="@+id/createAccount_PhoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/create_account_phone_hint"
                android:inputType="phone"
                android:maxLines="1" />


            <EditText
                android:id="@+id/createAccount_PasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />

            <Button
                android:id="@+id/createAccount_CreateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@android:color/transparent"
                android:text="@string/login_create_account_button"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>